# trabSISOP2

./: CMakeCache.txt  CMakeLists.txt  ThreadConfig.cmake  ThreadTargets.cmake  contributors.txt
grau_a_eval/: CMakeLists.txt  Makefile  phil_1.c  phil_2.c  phil_4.c  phil_6.c  prod_cons.c  rw_locking.h  sanity_joiner.c  sanity_stack.c
graua-skel/: Makefile  README.md  cmake_install.cmake
graua-skel/grau_a_eval/: cmake_install.cmake  cond.h  phil_1  phil_2  phil_3  phil_3.c  phil_4  phil_5  phil_5.c  prod_cons  prod_cons_condvar  prod_cons_condvar.c  prod_cons_yielding  prod_cons_yielding.c  rw_locks  rw_locks.c  sanity_joiner  sanity_recursion  sanity_recursion.c  sanity_stack  test1  test1.c
graua-skel/libthread/: Makefile  config.h  thread.c  thread.h
libthread/: cmake_install.cmake  thread.c  thread.h
tests/: Makefile  cmake_install.cmake
